Implement Glassmorphism design, new Quiz & Predictor logic, and update README

--- a/main.html
+++ b/main.html
@@ -29,10 +29,10 @@
             <div id="year-fact" class="fact-content">Loading data stream...</div>
         </div>
 
-        <!-- Date Fact -->
+        <!-- Math Fact (Replaces Date Fact) -->
         <div class="card">
-            <h2>Date Fact</h2>
-            <div id="date-fact" class="fact-content">Loading data stream...</div>
+            <h2>Math Fact</h2>
+            <div id="math-fact" class="fact-content">Calculating probabilities...</div>
         </div>
 
         <!-- Weather -->
@@ -48,21 +48,17 @@
         </div>
     </div>
 
-    <!-- Quiz Section -->
-    <div id="quiz-container" class="quiz-section">
-        <h3>Chrono-Quiz</h3>
-        <p>Loading questions...</p>
-    </div>
-
     <!-- Image Generator -->
     <div class="image-gen-section">
         <h2>Visual Archive Generator</h2>
         <canvas id="fact-canvas"></canvas>
+        <br>
         <button id="download-btn" class="action-btn">Download Artifact</button>
     </div>
 
     <!-- Navigation -->
     <div class="nav-section">
+        <a href="quiz.html" class="quiz-btn">Enter Chrono-Quiz</a>
         <a href="predictor.html" class="future-btn">Proceed to Future</a>
     </div>
 
