--- a/html/predictor.html
+++ b/html/predictor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QueryDay: Future Predictor</title>
-    <link rel="stylesheet" href="css/predictor.css">
+    <link rel="stylesheet" href="../css/predictor.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Orbitron:wght@400;700&display=swap"
@@ -42,7 +42,7 @@
         <a href="main.html" class="btn btn-secondary">Return to Present</a>
     </div>
 
-    <script src="js/predictor.js"></script>
+    <script src="../js/predictor.js"></script>
 </body>
 
 </html>
